WIP for adding UI Logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="content">
       <form id="form">
         <p>Put a number and Mr. Roboger will count from zero to your number in his interesting dialect!</p>
-        <input id="input" type="number" min="0" required>
+        <input id="input" type="number" min="0">
         <button type="submit" class="btn">Submit!</button>
       </form>
       <button id="reset" onClick="window.location.reload();" class="btn">Go again!</button>
