Repush for submission

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <label for="userInput">Choose a number</label>
         <br>
         <input id="user-Input" type="number" name="user-Input">
-        <button type="submit" id="submitButton" class="btn">Submit!</button>
+        <button type="submit" id="submitButton" class="btn">Speak!
+        </button>
       </form>
-      <button type="button" id="reset" onClick="window.location.reload();" class="btn">Go again!</button>
+      <br>
+      <button type="button" id="reset" onClick="window.location.reload();" class="hidden">AGAIN! AGAIN!</button>
       <div class="row">
         <div class="hidden" id="user" class="col-4">
           <h2>You said:</h2>
